output/aws-lambda-python-alpha-function.vpc/cdk-integ-lambda-python-vpc.template.json
{
  "Resources": {
    "myvpc9455A260": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc"
          }
        ]
      }
    },
    "myvpcPublicSubnet1Subnet6BD75C12": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet1"
          }
        ]
      }
    },
    "myvpcPublicSubnet1RouteTableF7E8D7F1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet1"
          }
        ]
      }
    },
    "myvpcPublicSubnet1RouteTableAssociationC697FA56": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPublicSubnet1RouteTableF7E8D7F1"
        },
        "SubnetId": {
          "Ref": "myvpcPublicSubnet1Subnet6BD75C12"
        }
      }
    },
    "myvpcPublicSubnet1DefaultRouteBE259807": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPublicSubnet1RouteTableF7E8D7F1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myvpcIGW24C0BBAE"
        }
      },
      "DependsOn": [
        "myvpcVPCGWD483DB64"
      ]
    },
    "myvpcPublicSubnet1EIP88D18203": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet1"
          }
        ]
      }
    },
    "myvpcPublicSubnet1NATGatewayD3DC5B8D": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "myvpcPublicSubnet1Subnet6BD75C12"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "myvpcPublicSubnet1EIP88D18203",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "myvpcPublicSubnet1DefaultRouteBE259807",
        "myvpcPublicSubnet1RouteTableAssociationC697FA56"
      ]
    },
    "myvpcPublicSubnet2Subnet844B7F05": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet2"
          }
        ]
      }
    },
    "myvpcPublicSubnet2RouteTable9A4CA50C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet2"
          }
        ]
      }
    },
    "myvpcPublicSubnet2RouteTableAssociation28F6DD6F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPublicSubnet2RouteTable9A4CA50C"
        },
        "SubnetId": {
          "Ref": "myvpcPublicSubnet2Subnet844B7F05"
        }
      }
    },
    "myvpcPublicSubnet2DefaultRoute22D543BA": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPublicSubnet2RouteTable9A4CA50C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myvpcIGW24C0BBAE"
        }
      },
      "DependsOn": [
        "myvpcVPCGWD483DB64"
      ]
    },
    "myvpcPublicSubnet2EIPA3AF827D": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet2"
          }
        ]
      }
    },
    "myvpcPublicSubnet2NATGateway45472CCD": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "myvpcPublicSubnet2Subnet844B7F05"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "myvpcPublicSubnet2EIPA3AF827D",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PublicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "myvpcPublicSubnet2DefaultRoute22D543BA",
        "myvpcPublicSubnet2RouteTableAssociation28F6DD6F"
      ]
    },
    "myvpcPrivateSubnet1SubnetAE3DECEE": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "myvpcPrivateSubnet1RouteTable991B69A9": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "myvpcPrivateSubnet1RouteTableAssociation91351DDE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPrivateSubnet1RouteTable991B69A9"
        },
        "SubnetId": {
          "Ref": "myvpcPrivateSubnet1SubnetAE3DECEE"
        }
      }
    },
    "myvpcPrivateSubnet1DefaultRouteA1815BF3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPrivateSubnet1RouteTable991B69A9"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "myvpcPublicSubnet1NATGatewayD3DC5B8D"
        }
      }
    },
    "myvpcPrivateSubnet2SubnetE09939FB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "myvpcPrivateSubnet2RouteTableF2B44BF5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "myvpcPrivateSubnet2RouteTableAssociation071745F0": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPrivateSubnet2RouteTableF2B44BF5"
        },
        "SubnetId": {
          "Ref": "myvpcPrivateSubnet2SubnetE09939FB"
        }
      }
    },
    "myvpcPrivateSubnet2DefaultRouteB54E314A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myvpcPrivateSubnet2RouteTableF2B44BF5"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "myvpcPublicSubnet2NATGateway45472CCD"
        }
      }
    },
    "myvpcIGW24C0BBAE": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "cdk-integ-lambda-python-vpc/my_vpc"
          }
        ]
      }
    },
    "myvpcVPCGWD483DB64": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "myvpc9455A260"
        },
        "InternetGatewayId": {
          "Ref": "myvpcIGW24C0BBAE"
        }
      }
    },
    "myhandlerServiceRole77891068": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
              ]
            ]
          }
        ]
      },
      "DependsOn": [
        "myvpcPrivateSubnet1DefaultRouteA1815BF3",
        "myvpcPrivateSubnet1RouteTableAssociation91351DDE",
        "myvpcPrivateSubnet2DefaultRouteB54E314A",
        "myvpcPrivateSubnet2RouteTableAssociation071745F0"
      ]
    },
    "myhandlerSecurityGroupF566A239": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatic security group for Lambda Function cdkinteglambdapythonvpcmyhandlerCA7DB4EE",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "myvpc9455A260"
        }
      },
      "DependsOn": [
        "myvpcPrivateSubnet1DefaultRouteA1815BF3",
        "myvpcPrivateSubnet1RouteTableAssociation91351DDE",
        "myvpcPrivateSubnet2DefaultRouteB54E314A",
        "myvpcPrivateSubnet2RouteTableAssociation071745F0"
      ]
    },
    "myhandlerD202FA8E": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
          },
          "S3Key": "3b4e770c8242272e96f6faafd45d2446549a060a25dcce2d246445447e356ca9.zip"
        },
        "Role": {
          "Fn::GetAtt": [
            "myhandlerServiceRole77891068",
            "Arn"
          ]
        },
        "Handler": "index.handler",
        "Runtime": "python3.9",
        "VpcConfig": {
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "myhandlerSecurityGroupF566A239",
                "GroupId"
              ]
            }
          ],
          "SubnetIds": [
            {
              "Ref": "myvpcPrivateSubnet1SubnetAE3DECEE"
            },
            {
              "Ref": "myvpcPrivateSubnet2SubnetE09939FB"
            }
          ]
        }
      },
      "DependsOn": [
        "myhandlerServiceRole77891068",
        "myvpcPrivateSubnet1DefaultRouteA1815BF3",
        "myvpcPrivateSubnet1RouteTableAssociation91351DDE",
        "myvpcPrivateSubnet2DefaultRouteB54E314A",
        "myvpcPrivateSubnet2RouteTableAssociation071745F0"
      ]
    }
  },
  "Outputs": {
    "ExportsOutputRefmyhandlerD202FA8E369E8804": {
      "Value": {
        "Ref": "myhandlerD202FA8E"
      },
      "Export": {
        "Name": "cdk-integ-lambda-python-vpc:ExportsOutputRefmyhandlerD202FA8E369E8804"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
